16802
```scala
object Foo {
  s"""something like this
  ${3+4} does not work.
  """
}
```
```scala
sandbox\Test.scala:2: error: unclosed string literal
  s"""something like this
   ^
sandbox\Test.scala:2: error: unclosed string literal
  s"""something like this

                         ^

***and the compiler hangs***
```
